// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CodeSamplesBox Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
>
  <div
    className="sc-AykKF gSVlrO"
  >
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        Foo
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        this is foo
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        code
code

      </pre>
    </div>
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        Bar
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        this is bar
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        code
code

      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Head Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
/>
`;

exports[`Storyshots Header Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
>
  <header
    className="sc-AykKD buFqre"
  >
    <a
      className="sc-AykKC fSVTkQ"
      href="/"
      onClick={[Function]}
    >
      &lt;
    </a>
    <a
      className="sc-AykKC fSVTkQ"
      href="/saga"
      onClick={[Function]}
    >
      saga
    </a>
    <a
      className="sc-AykKC fSVTkQ"
      href="/apollo"
      onClick={[Function]}
    >
      apollo
    </a>
    <span>
      development
    </span>
  </header>
</div>
`;

exports[`Storyshots NotFound Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
>
  <div
    className="sc-AykKJ eXWPhS"
  >
    [404] Not Found
  </div>
</div>
`;

exports[`Storyshots Saga Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
>
  <p>
    get: get all samples
  </p>
  <p>
    post: add a like count
  </p>
  <div
    className="sc-AykKF gSVlrO"
  >
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        pages.tsx
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        aaaa
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        test-code
      </pre>
    </div>
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        pages.tsx
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        aaaa
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        test-code
      </pre>
    </div>
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        pages.tsx
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        aaaa
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        test-code
      </pre>
    </div>
    <div
      className="sc-AykKG dKGDDl"
    >
      <h2>
        pages.tsx
      </h2>
      0
      <a
        className="sc-AykKH cIyBuv"
        data-testid="like-button"
        onClick={[Function]}
      >
        likes
      </a>
      <p>
        aaaa
      </p>
      <a
        className="sc-AykKI fSiutg"
        data-testid="collapse-button"
        onClick={[Function]}
      >
        open
      </a>
      <pre>
        test-code
      </pre>
    </div>
  </div>
</div>
`;

exports[`Storyshots Top Base 1`] = `
<div
  style={
    Object {
      "fontSize": "1rem",
      "margin": "12px",
    }
  }
>
  <section>
    <div
      className="sc-AykKK dzfBJD"
    >
      <p>
        test-code
      </p>
    </div>
  </section>
</div>
`;
